# Life-Simulation

./: .gitmodules  CMakeLists.txt  main.cpp
src/: Entity.hpp  Simulation.hpp
